--- a/app/src/assets/css/style.css
+++ b/app/src/assets/css/style.css
@@ -1,8 +1,23 @@
 body{
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(4, 0, 0);
     color: white;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+}
+
+h1{
+    position: absolute;
+    top: 20px;
+    text-align: center;
 }
 
 canvas{
-    background-color: #00c;
+    background-color:  rgb(4, 0, 0);
+    border: 3px solid #ff0080;
+    box-shadow: 0 0 20px #ff0080, 0 0 40px #ff0080, inset 0 0 20px rgba(255, 0, 128, 0.5);
 }
